k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flutter-app
  labels:
    name: flutter-app
    environment: production
