k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flutter-app-service
  namespace: flutter-app
  labels:
    app: flutter-app
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  selector:
    app: flutter-app
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
